# roolah

./: .env  .gitignore  Cargo.toml  README.md  sqlx-data.json
derive/: Cargo.toml
derive/src/: column_enum.rs  lib.rs
src/: column_enum.rs  currency.rs  error.rs  finance.rs  lib.rs  main.rs  model.rs
src/currency/: currencies.rs
src/finance/: currency.rs  decimal.rs
src/finance/currency/: currencies.rs
src/model/: account.rs  currency.rs  decimal.rs  tag.rs  transaction.rs
src/model/currency/: currencies.rs
