[package]
name = "roolah"
version = "0.1.0"
authors = ["Mori"]
edition = "2021"
description = "A budgeting and productivity app."
# documentation = 
readme = "README.md"
# homepage = 
repository = "https://github.com/remorae/roolah"
license-file = "LICENSE.md"
keywords = []
categories = []

[dependencies]
roolah_derive = { version = "0.1", path = "derive" }
miette = { version = "5.3", features = ["fancy"] }
thiserror = "1.0"
time = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "time", "sqlite", "offline", "decimal"] }
tokio = { version = "1.21", features = ["full"] }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"

[profile.dev.package.sqlx-macros]
opt-level = 3